--- a/proyecto-access-1/src/main/resources/application.properties
+++ b/proyecto-access-1/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:ucanaccess:///app/database/Prod_Data.mdb;memory=false
 spring.datasource.driver-class-name=net.ucanaccess.jdbc.UcanaccessDriver
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.hikari.pool-name=HikariCP
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=access-api-id
+spring.kafka.consumer.auto-offset-reset=earliest
