--- a/proyecto-access-1/pom.xml
+++ b/proyecto-access-1/pom.xml
@@ -30,59 +30,90 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-    <!-- Spring Boot Web dependency -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+	    <!-- Spring Boot Web dependency -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	
+	    <!-- Spring Boot JDBC dependency for JdbcTemplate -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-jdbc</artifactId>
+	    </dependency>
+	
+	    <!-- UCanAccess JDBC driver for Microsoft Access -->
+		<dependency>
+		    <groupId>io.github.spannm</groupId>
+		    <artifactId>ucanaccess</artifactId>
+		    <version>5.1.0</version>
+		  </dependency>
+	     <!-- HikariCP for better connection pooling -->
+	    <dependency>
+	        <groupId>com.zaxxer</groupId>
+	        <artifactId>HikariCP</artifactId>
+	    </dependency>
+	
+	    <!-- Spring Boot Test for testing purposes -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-test</artifactId>
+	        <scope>test</scope>
+	    </dependency>
+	    
+	 	<dependency>
+	        <groupId>com.healthmarketscience.jackcess</groupId>
+	        <artifactId>jackcess</artifactId>
+	        <version>3.0.1</version>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		     <!-- Esta versión es más estable para UCanAccess -->
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>net.sf.jt400</groupId>
+		    <artifactId>jt400</artifactId>
+		    <version>6.3</version>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.kafka</groupId>
+		    <artifactId>spring-kafka</artifactId>
+		     <!-- Usa la última versión disponible -->
+		</dependency>
 
-    <!-- Spring Boot JDBC dependency for JdbcTemplate -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		     <!-- Usa la última versión disponible -->
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+		
+		
 
-    <!-- UCanAccess JDBC driver for Microsoft Access -->
-	<dependency>
-	    <groupId>io.github.spannm</groupId>
-	    <artifactId>ucanaccess</artifactId>
-	    <version>5.1.0</version>
-	  </dependency>
-     <!-- HikariCP for better connection pooling -->
-    <dependency>
-        <groupId>com.zaxxer</groupId>
-        <artifactId>HikariCP</artifactId>
-    </dependency>
 
-    <!-- Spring Boot Test for testing purposes -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
- <dependency>
-        <groupId>com.healthmarketscience.jackcess</groupId>
-        <artifactId>jackcess</artifactId>
-        <version>3.0.1</version>
-    </dependency>
-    
-    <dependency>
-    <groupId>org.hsqldb</groupId>
-    <artifactId>hsqldb</artifactId>
-     <!-- Esta versión es más estable para UCanAccess -->
-</dependency>
-
-<dependency>
-    <groupId>commons-lang</groupId>
-    <artifactId>commons-lang</artifactId>
-    <version>2.6</version>
-</dependency>
-
-<dependency>
-    <groupId>net.sf.jt400</groupId>
-    <artifactId>jt400</artifactId>
-    <version>6.3</version>
-</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -92,6 +123,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+    <directory>D:\Proyecto Residencias\pruebaMonorepo2\Microservicio_MuebleriaBarsa\apps\access-api</directory>
 	</build>
 
 </project>
