--- a/proyecto-access-1/src/main/resources/application.properties
+++ b/proyecto-access-1/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:ucanaccess:///app/database/Prod_Data.mdb;memory=false
 spring.datasource.driver-class-name=net.ucanaccess.jdbc.UcanaccessDriver
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.hikari.pool-name=HikariCP
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=100000
+spring.datasource.hikari.connection-timeout=60000
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=access-api-id
 spring.kafka.consumer.auto-offset-reset=earliest
