--- a/proyecto-access-1/src/main/resources/application.properties
+++ b/proyecto-access-1/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.hikari.connection-timeout=60000
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=access-api-id
 spring.kafka.consumer.auto-offset-reset=earliest
+#logging.level.org.apache.kafka=DEBUG
+#logging.level.org.springfr.kafka=DEBUG
