--- a/proyecto-access-1/src/main/resources/application.properties
+++ b/proyecto-access-1/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.kafka.consumer.group-id=access-api-id
 spring.kafka.consumer.auto-offset-reset=earliest
 #logging.level.org.apache.kafka=DEBUG
 #logging.level.org.springfr.kafka=DEBUG
+
+cloudinary.cloud-name:name
+cloudinary.api-key:key
+cloudinary.api-secret:secreto
