--- a/proyecto-access-1/pom.xml
+++ b/proyecto-access-1/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+	<parent> 
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.3</version>
@@ -110,7 +110,18 @@
 		    <version>2.0.1.Final</version>
 		</dependency>
 		
+		<!-- Cloudinary -->
+		<dependency>
+	        <groupId>com.cloudinary</groupId>
+	        <artifactId>cloudinary-http5</artifactId>
+	        <version>2.0.0</version> 
+	    </dependency> 
 		
+		  <!-- Jackson para JSON -->
+		  <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		  </dependency>
 
 
 		
