--- a/proyecto-access-1/src/main/resources/application.properties
+++ b/proyecto-access-1/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.kafka.consumer.auto-offset-reset=earliest
 #logging.level.org.apache.kafka=DEBUG
 #logging.level.org.springfr.kafka=DEBUG
 
-cloudinary.cloud-name:name
-cloudinary.api-key:key
-cloudinary.api-secret:secreto
+cloudinary.cloud-name:dfibdwkhv
+cloudinary.api-key:355417428344389
+cloudinary.api-secret:ay3IChEldQaCE7sYtjGCziLXQ_8
